--- a/ProgettoCodice/app/src/main/AndroidManifest.xml
+++ b/ProgettoCodice/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.natour2021">
-
-
+    <uses-permission android:name="Android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="Android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.NaTour2021">
 
         <activity
-            android:name=".accesso.Sign_Up"
+            android:name=".accesso.Registrazione"
             android:exported="false" />
         <activity
             android:name=".accesso.Login"
