--- a/ProgettoCodice/app/src/main/AndroidManifest.xml
+++ b/ProgettoCodice/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NaTour2021">
         <activity
+            android:name="gui.accesso.PreLogin"
+            android:exported="false" />
+        <activity
             android:name="gui.accesso.Registrazione"
             android:exported="false" />
         <activity
