--- a/ProgettoCodice/app/src/main/AndroidManifest.xml
+++ b/ProgettoCodice/app/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.natour2021">
-
-    <uses-permission android:name="Android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="Android.permission.ACCESS_COARSE_LOCATION" />
+    package="com.example.progettoingsw">
 
     <application
         android:allowBackup="true"
@@ -11,15 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NaTour2021">
+        android:theme="@style/Theme.ProgettoINGSW">
         <activity
-            android:name="gui.accesso.PreLogin"
-            android:exported="false" />
-        <activity
-            android:name="gui.accesso.Registrazione"
-            android:exported="false" />
-        <activity
-            android:name="gui.accesso.Login"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
