--- a/ProgettoCodice/settings.gradle
+++ b/ProgettoCodice/settings.gradle
@@ -6,5 +6,5 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "NaTour2021"
+rootProject.name = "ProgettoINGSW"
 include ':app'
