--- a/ProgettoCodice/app/build.gradle
+++ b/ProgettoCodice/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+
 }
 
 android {
@@ -32,6 +34,8 @@ android {
 
 dependencies {
 
+
+    implementation 'com.google.android.gms:play-services-location:19.0.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
