--- a/ProgettoCodice/app/src/main/AndroidManifest.xml
+++ b/ProgettoCodice/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="@string/AIzaSyDRsJPzn34e2zENXmqSQuHoDH_p0yGeaAM" />
 
         <activity
             android:name=".GUI.home.Home"
